--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>pet-store</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pet-store</name>
-	<description>Final Project for Back End</description>
+	<description>Final Project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
